# fcm-rust-gauth-example

./: .env  Cargo.toml
src/: main.rs  notification_service.rs
