[package]
name = "fcm-rust-gauth-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
gauth = "0.7.0"
reqwest = "0.11.23"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
